<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"/>


    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="5"
            android:columnCount="2">

            <TextView
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_row="0"
                android:text="@string/app_name"
                android:layout_columnSpan="2"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView android:id="@+id/Title"
                        android:textSize="20dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/BBC_Title"
                        />

                    <CheckBox android:id="@+id/CheckBox"
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/BBC_CheckBox" />

                    <TextView android:id="@+id/TextView1"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/Title"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textSize="20dp"
                        android:text="@string/TextView1" />

                    <EditText android:id="@+id/EditText1"
                        android:layout_below="@+id/Title"
                        android:layout_toRightOf="@+id/TextView1"
                        android:textSize="14dp"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:hint="@string/EditText1" />
                </RelativeLayout>

                <ImageButton android:id="@+id/BBC_ImageButton"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bbc" />

                <Button android:id="@+id/BBC_Button"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/GoToBBC" />

            </LinearLayout>

        </GridLayout>


        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/header_layout"
            app:menu="@menu/menu2"
            android:id="@+id/nav_view"/>
    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>